
public class Efectivo implements MedioDePago{
	TipoMedio codTipo = TipoMedio.CASH;
	
    public void abonarOperacion(float valor) {
    }

}
