
public class Item {
	int valor;
	String descripcion;

}
