package medioDePago;

public class CajeroAutomatico implements MedioDePago {
	//TipoMedioDePago codTipoMedioDePago = TipoMedioDePago.ATM;

	public void abonarOperacion(float valor) {
	}

}
