package medioDePago;

public class DineroEnCuenta implements MedioDePago {
	//TipoMedioDePago codTipoMedioDePago = TipoMedioDePago.ACCOUNT_MONEY;

	public void abonarOperacion(float valor) {
		
	}

}
