package medioDePago;

public interface MedioDePago {
	public void abonarOperacion(float valor);
}
