@startuml
class BuilderOperacionDeEgreso [[java:model.BuilderOperacionDeEgreso]] {
	-LocalDateTime fechaOperacion
    -DocumentoComercial codDocumentoComercial
    -MedioDePago medio
    -List<Item> items
    -Organizacion organizacion
    -Proveedor proveedor
	+void setCodDocumentoComercial(DocumentoComercial codDocumentoComercial)
	+void setFechaOperacion(LocalDateTime fechaOperacion)
	+void setMedio(MedioDePago medio)
	-void validarListaItemsNoVacia(List<Item> items)
	+void setItems(List<Item> items)
	+void setOrganizacion(Organizacion organizacion)
	+OperacionDeEgreso registrarOperacion()
}

BuilderOperacionDeEgreso ..> "1" OperacionDeEgreso

class DocumentoComercial [[java:model.DocumentoComercial]] {
}

class MedioDePago [[java:model.MedioDePago]] {
}

class Item [[java:model.Item]] {
}

class Organizacion [[java:model.Organizacion]] {
}

class Proveedor [[java:model.Proveedor]] {
}

class TarjetaDeCredito [[java:model.TarjetaDeCredito]] {
	-int numeroTarjeta
	-String titular
	-int codigoSeguridad
	-int cuotas
	+void abonarOperacion(float valor)
}
interface MedioDePago [[java:model.MedioDePago]] {
}
MedioDePago <|.. TarjetaDeCredito
class TarjetaDeDebito [[java:model.TarjetaDeDebito]] {
	-int numeroTarjeta
	-String titular
	-int codigoSeguridad
	+void abonarOperacion(float valor)
}
interface MedioDePago [[java:model.MedioDePago]] {
}
MedioDePago <|.. TarjetaDeDebito
class DocumentoComercial [[java:model.DocumentoComercial]] {
	-int ID
}
class TipoDocumentoComercial [[java:model.TipoDocumentoComercial]] {
}
DocumentoComercial --> "1" TipoDocumentoComercial : tipoDoc
class DineroEnCuenta [[java:model.DineroEnCuenta]] {
	+void abonarOperacion(float valor)
}
interface MedioDePago [[java:model.MedioDePago]] {
}
MedioDePago <|.. DineroEnCuenta
interface MedioDePago [[java:model.MedioDePago]] {
	void abonarOperacion(float valor)
}
class OperacionDeEgreso [[java:model.OperacionDeEgreso]] {
	-LocalDateTime fechaOperacion
	+void setCodDocumentoComercial(DocumentoComercial codDocumentoComercial)
	+OperacionDeEgreso(DocumentoComercial codDocumentoComercial, LocalDateTime fechaOperacion, MedioDePago medio, List<Item> items, Organizacion organizacion, Proveedor proveedor)
	+float valorTotal()
}
class DocumentoComercial [[java:model.DocumentoComercial]] {
}
OperacionDeEgreso --> "1" DocumentoComercial : documentoComercial
class MedioDePago [[java:model.MedioDePago]] {
}
OperacionDeEgreso --> "1" MedioDePago : medio
class Item [[java:model.Item]] {
}
OperacionDeEgreso --> "*" Item : items
class Organizacion [[java:model.Organizacion]] {
}
OperacionDeEgreso --> "1" Organizacion : organizacion
class Proveedor [[java:model.Proveedor]] {
}
OperacionDeEgreso --> "1" Proveedor : proveedor
class Item [[java:model.Item]] {
	-int valor
	-String descripcion
	+Item(int valor, String descripcion)
	+int getValor()
	+String getDescripcion()
}
class Organizacion [[java:model.Organizacion]] {
	+Organizacion(List<EntidadJuridica> entidadesJuridicas, List<EntidadBase> entidadesBase)
	+List<EntidadJuridica> getEntidadesJuridicas()
	+void setEntidadesJuridicas(List<EntidadJuridica> entidadesJuridicas)
	+List<EntidadBase> getEntidadesBase()
	+void setEntidadesBase(List<EntidadBase> entidadesBase)
}
class EntidadJuridica [[java:model.EntidadJuridica]] {
}
Organizacion --> "*" EntidadJuridica : entidadesJuridicas
class EntidadBase [[java:model.EntidadBase]] {
}
Organizacion --> "*" EntidadBase : entidadesBase
enum CategoriaEntidadJuridica [[java:model.CategoriaEntidadJuridica]] {
	OSC
	MICRO_EMPRESA
	PEQUENIA_EMPRESA
	EMPRESA_MEDIANA_TRAMO_1
	EMPRESA_MEDIANA_TRAMO_2
}
class EntidadJuridica [[java:model.EntidadJuridica]] {
	-String razonSocial
	-String nombreFicticio
	-int cuit
	-String direccionPostal
	-int codInscIGJ
	+EntidadJuridica(String razonSocial, String nombreFicticio, int cuit, String direccionPostal, int codInscIGJ, CategoriaEntidadJuridica categoriaEntidad)
}
class CategoriaEntidadJuridica [[java:model.CategoriaEntidadJuridica]] {
}
EntidadJuridica --> "1" CategoriaEntidadJuridica : categoriaEntidad
class Efectivo [[java:model.Efectivo]] {
	+void abonarOperacion(float valor)
}
interface MedioDePago [[java:model.MedioDePago]] {
}
MedioDePago <|.. Efectivo
enum TipoDocumentoComercial [[java:model.TipoDocumentoComercial]] {
	FACTURA
	TICKET
	RECIBO
}
class EntidadBase [[java:model.EntidadBase]] {
	-String nombreFicticio
	-String descripcion
	+EntidadBase(String nombreFicticio, String descripcion)
	+EntidadBase(String nombreFicticio, String descripcion, EntidadJuridica entidadJuridica)
}
class EntidadJuridica [[java:model.EntidadJuridica]] {
}
EntidadBase --> "1" EntidadJuridica : entidadJuridica
class Proveedor [[java:model.Proveedor]] {
	-String razonSocial
	-String direccionPostal
	-int cuil
	+Proveedor(String razonSocial, String direccionPostal, int cuil)
	+String getRazonSocial()
	+void setRazonSocial(String razonSocial)
	+String getDireccionPostal()
	+void setDireccionPostal(String direccionPostal)
	+int getCuil()
	+void setCuil(int cuil)
}
class CajeroAutomatico [[java:model.CajeroAutomatico]] {
	+void abonarOperacion(float valor)
}
interface MedioDePago [[java:model.MedioDePago]] {
}
MedioDePago <|.. CajeroAutomatico
@enduml